[gd_scene load_steps=2 format=3 uid="uid://bwl7xvxblhy6c"]

[ext_resource type="Script" uid="uid://camf36trh3qht" path="res://src/ui/popup/popup.gd" id="1_x4j46"]

[node name="popup" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x4j46")

[node name="header" type="Label" parent="."]
layout_mode = 2
text = "Question?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="yes" type="Button" parent="hBox"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_half"
text = "Yes"

[node name="no" type="Button" parent="hBox"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"Button_half"
text = "No"

[connection signal="draw" from="." to="." method="_on_draw"]
[connection signal="focus_entered" from="hBox/yes" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="hBox/yes" to="." method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="hBox/yes" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="hBox/yes" to="." method="_on_yes_pressed"]
[connection signal="focus_entered" from="hBox/no" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="hBox/no" to="." method="_on_mouse_entered" flags=18]
[connection signal="mouse_exited" from="hBox/no" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="hBox/no" to="." method="_on_no_pressed"]
